# robot_trailer_path_planning

./: .gitignore  CMakeLists.txt  planner.py  profile_cpp_planner.py  profile_planner.py  pyproject.toml  run_planner.py  run_visualizer.py  simulator.py  visualizer.py
cpp/: bindings.cpp  footprint_lookup.cpp  footprint_lookup.hpp  planner.cpp  planner.hpp  profiler.hpp  run_planner_native.cpp  simulator.cpp  simulator.hpp
